--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,50 @@
+agentops==0.4.5
+annotated-types==0.7.0
+anyio==4.9.0
 blinker==1.9.0
 certifi==2025.1.31
+cffi==1.17.1
 charset-normalizer==3.4.1
 click==8.1.8
+cryptography==44.0.2
+Deprecated==1.2.18
+distro==1.9.0
 dotenv==0.9.9
 Flask==3.1.0
+googleapis-common-protos==1.69.2
+h11==0.14.0
+httpcore==1.0.7
+httpx==0.28.1
 idna==3.10
+importlib_metadata==8.6.1
 itsdangerous==2.2.0
 Jinja2==3.1.6
+jiter==0.9.0
 MarkupSafe==3.0.2
+openai==1.68.2
+opentelemetry-api==1.31.1
+opentelemetry-exporter-otlp-proto-common==1.31.1
+opentelemetry-exporter-otlp-proto-http==1.31.1
+opentelemetry-instrumentation==0.52b1
+opentelemetry-proto==1.31.1
+opentelemetry-sdk==1.31.1
+opentelemetry-semantic-conventions==0.52b1
+ordered-set==4.1.0
+packaging==24.2
+protobuf==5.29.4
+psutil==6.0.0
+pycparser==2.22
+pydantic==2.10.6
+pydantic_core==2.27.2
 PyJWT==2.10.1
 python-dotenv==1.0.1
+PyYAML==6.0.2
 requests==2.32.3
+sniffio==1.3.1
+termcolor==2.4.0
+tqdm==4.67.1
+typing_extensions==4.12.2
 urllib3==2.3.0
 Werkzeug==3.1.3
+wrapt==1.17.2
+zipp==3.21.0
