--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,24 @@
 agentops==0.4.5
+altair==5.5.0
 annotated-types==0.7.0
 anyio==4.9.0
+attrs==25.3.0
 blinker==1.9.0
+cachetools==5.5.2
 certifi==2025.1.31
 cffi==1.17.1
 charset-normalizer==3.4.1
 click==8.1.8
+colorama==0.4.6
 cryptography==44.0.2
 Deprecated==1.2.18
 distro==1.9.0
 dotenv==0.9.9
 Flask==3.1.0
+gitdb==4.0.12
+GitPython==3.1.44
 googleapis-common-protos==1.69.2
+griffe==1.6.2
 h11==0.14.0
 httpcore==1.0.7
 httpx==0.28.1
@@ -20,8 +27,18 @@ importlib_metadata==8.6.1
 itsdangerous==2.2.0
 Jinja2==3.1.6
 jiter==0.9.0
+jsonpatch==1.33
+jsonpointer==3.0.0
+jsonschema==4.23.0
+jsonschema-specifications==2024.10.1
+langchain-core==0.3.48
+langchain-text-splitters==0.3.7
+langsmith==0.3.18
 MarkupSafe==3.0.2
+narwhals==1.32.0
+numpy==2.2.4
 openai==1.68.2
+openai-agents==0.0.6
 opentelemetry-api==1.31.1
 opentelemetry-exporter-otlp-proto-common==1.31.1
 opentelemetry-exporter-otlp-proto-http==1.31.1
@@ -30,21 +47,41 @@ opentelemetry-proto==1.31.1
 opentelemetry-sdk==1.31.1
 opentelemetry-semantic-conventions==0.52b1
 ordered-set==4.1.0
+orjson==3.10.16
 packaging==24.2
+pandas==2.2.3
+pillow==11.1.0
 protobuf==5.29.4
 psutil==6.0.0
+pyarrow==19.0.1
 pycparser==2.22
 pydantic==2.10.6
 pydantic_core==2.27.2
+pydeck==0.9.1
 PyJWT==2.10.1
+python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
+pytz==2025.2
 PyYAML==6.0.2
+referencing==0.36.2
 requests==2.32.3
+requests-toolbelt==1.0.0
+rpds-py==0.23.1
+six==1.17.0
+smmap==5.0.2
 sniffio==1.3.1
+SQLAlchemy==2.0.39
+streamlit==1.44.0
+tenacity==9.0.0
 termcolor==2.4.0
+toml==0.10.2
+tornado==6.4.2
 tqdm==4.67.1
+types-requests==2.32.0.20250306
 typing_extensions==4.12.2
+tzdata==2025.2
 urllib3==2.3.0
 Werkzeug==3.1.3
 wrapt==1.17.2
 zipp==3.21.0
+zstandard==0.23.0
